--- a/django/canban_board/templates/registration/login.html
+++ b/django/canban_board/templates/registration/login.html
@@ -14,8 +14,7 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
+<form  action="{% url 'login' %}" method="POST">{% csrf_token %}
 <table>
 <tr>
     <td>{{ form.username.label_tag }}</td>
