--- a/django/canban_board/templates/canban_board/list.html
+++ b/django/canban_board/templates/canban_board/list.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-  <button><a href="{% url 'canban_board:logout_view' %}">logout</a></button>
+  <a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info btn-sm">LOGOUT</a>
 <div class="row">
 <div class="col-4">
 <h1> TODO </h1>
@@ -11,8 +11,9 @@
 <h2>{{ each.description}}</h2>
 <h2>{{ each.start_date}}</h2>
 <h2>{{ each.end_date}}</h2>
+<a href="{% url 'canban_board:change_card' %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
 {% endfor %}
-<button><a href="{% url 'canban_board:create_card' %}">add card</a></button>
+<a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
 </div>
 
 <div class="col-4">
@@ -22,8 +23,9 @@
 <h2>{{ each.description}}</h2>
 <h2>{{ each.start_date}}</h2>
 <h2>{{ each.end_date}}</h2>
+<a href="{% url 'canban_board:change_card' %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
 {% endfor %}
-<button><a href="{% url 'canban_board:create_card' %}">add card</a></button>
+<a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
 </div>
 
 <div class="col-4">
@@ -33,7 +35,8 @@
 <h2>{{ each.description}}</h2>
 <h2>{{ each.start_date}}</h2>
 <h2>{{ each.end_date}}</h2>
+<a href="{% url 'canban_board:change_card' %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
 {% endfor %}
-<button><a href="{% url 'canban_board:create_card' %}">add card</a></button>
+<a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
 </div>
 {% endblock %}
