--- a/django/canban_board/templates/canban_board/list.html
+++ b/django/canban_board/templates/canban_board/list.html
@@ -2,41 +2,50 @@
 {% block content %}
 
 <div class="container">
-  <a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info btn-sm">LOGOUT</a>
+  <a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info btn-sm" style="margin-bottom:-1%;">LOGOUT</a>
 <div class="row">
 <div class="col-4">
-<h1> TODO </h1>
-{% for each in todo %}
-<h2>{{ each.name}}</h2>
-<h2>{{ each.description}}</h2>
-<h2>{{ each.start_date}}</h2>
-<h2>{{ each.end_date}}</h2>
-<a href="{% url 'canban_board:change_card' %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-{% endfor %}
+<h1> TO DO </h1>
 <a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
+{% for each in todo %}
+<div style="border: 3px solid #868e8f20; border-radius: 8px;">
+<h2>{{ each.name}}</h2>
+<h3>{{ each.description}}</h3>
+<h3>{{ each.start_date|date:"d M y"}}г.</h3>
+<h3>{{ each.end_date|date:"d M y"}}г.</h3>
+<a href="{% url 'canban_board:change_card' each.id %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="{% url 'canban_board:delete_card' each.id %}" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+</div>
+{% endfor %}
 </div>
 
 <div class="col-4">
 <h1> DOING </h1>
-{% for each in doing %}
-<h2>{{ each.name}}</h2>
-<h2>{{ each.description}}</h2>
-<h2>{{ each.start_date}}</h2>
-<h2>{{ each.end_date}}</h2>
-<a href="{% url 'canban_board:change_card' %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-{% endfor %}
 <a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
+{% for each in doing %}
+<div style="border: 3px solid #868e8f20; border-radius: 8px;">
+<h2>{{ each.name}}</h2>
+<h3>{{ each.description}}</h3>
+<h3>start date: {{ each.start_date|date:"d M y"}}г.</h3>
+<h3>end date : {{ each.end_date|date:"d M y"}}г.</h3>
+<a href="{% url 'canban_board:change_card' each.id%}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="{% url 'canban_board:delete_card' each.id %}" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+</div>
+{% endfor %}
 </div>
 
 <div class="col-4">
 <h1> DONE </h1>
-{% for each in done %}
-<h2>{{ each.name}}</h2>
-<h2>{{ each.description}}</h2>
-<h2>{{ each.start_date}}</h2>
-<h2>{{ each.end_date}}</h2>
-<a href="{% url 'canban_board:change_card' %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-{% endfor %}
 <a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
+{% for each in done %}
+<div style="border: 3px solid #868e8f20; border-radius: 8px;">
+<h2>{{ each.name}}</h2>
+<h3>{{ each.description}}</h3>
+<h3>{{ each.start_date|date:"d M y"}}г.</h3>
+<h3>{{ each.end_date|date:"d M y"}}г.</h3>
+<a href="{% url 'canban_board:change_card' each.id %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="{% url 'canban_board:delete_card' each.id %}" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+</div>
+{% endfor %}
 </div>
 {% endblock %}
