--- a/django/canban_board/static/css/canban_board.css
+++ b/django/canban_board/static/css/canban_board.css
@@ -1,9 +1,10 @@
-h1 {margin-top: 6%;  font-size: 138%; background-color: #13dfed45; text-align: center}
-h2 {margin-top: 3%; font-size: 150%;}
+h1 {font-size: 138%; background-color: #13dfed45; text-align: center}
+h2 {margin-top: 1%; font-size: 150%;}
 h3 {font-size: 120%;}
-h1, h2, h3 {padding: 1%}
+h1, h2, h3 {padding-top:1%; padding-right: 1%; padding-left: 3%;padding-right: 3%}
 body {font-family: 'Times New Roman', Georgia, Times, sans-serif; }
-a {margin-bottom: 1%}
+a {margin-bottom: 1%;margin-left:1%}
 input,  textarea {width:200%;}
-.create{margin-top: 10%; border: 3px solid #13dfed45; border-radius: 8px;padding: 3%}
+.create{margin-top: 10%; border: 3px solid #13dfed45; border-radius: 15px; padding: 3%}
+p {margin-left: 94%; margin-bottom: 0%; padding: 3px}
 /* color: #3f4142 */
