--- a/django/canban_board/templates/canban_board/create_card.html
+++ b/django/canban_board/templates/canban_board/create_card.html
@@ -8,7 +8,7 @@
        <table>
           {{ form  }}
       </table>
-      <a href="" class="btn btn-outline-info btn-lg">SAVE</a>
+      <a href="" class="btn btn-outline-info" style="width:20%; margin-left:7%; margin-top: 1%">SAVE</a>
       </form>
 </div>
 </div>
