--- a/django/canban_board/templates/canban_board/create_card.html
+++ b/django/canban_board/templates/canban_board/create_card.html
@@ -7,7 +7,7 @@
        <table>
           {{ form }}
       </table>
-     <button type="submit" value="SAVE" >Save</button>
+     <button type="submit" value="SAVE" style="width:20%; margin-left:7%; margin-top: 1%">Save</button>
 </form>
 </div>
 </div>
