--- a/django/canban_board/templates/canban_board/list.html
+++ b/django/canban_board/templates/canban_board/list.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-  <p><a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info btn-sm">LOGOUT</a></p>
+  <p class="login"><a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info btn-sm">LOGOUT</a></p>
 <div class="row">
 <div class="col-4">
 <h1> TO DO </h1>
