--- a/django/canban_board/templates/canban_board/create_card.html
+++ b/django/canban_board/templates/canban_board/create_card.html
@@ -3,13 +3,10 @@
 {% block content %}
 <div class="container">
 <div class="create mx-lg-auto">
-<form action="{% url 'canban_board:create_card' %}" method="POST">{% csrf_token %}
-
-          <!-- {{ form.as_p }} -->
+<form  method="POST">{% csrf_token %}
           <table>
             {{ form }}
           </table>
-
      <button type="submit" value="SAVE" class="btn btn-outline-info mx-lg-auto" >Save</button>
 </form>
 </div>
