--- a/django/canban_board/templates/canban_board/lending.html
+++ b/django/canban_board/templates/canban_board/lending.html
@@ -9,11 +9,10 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 
-<div class="row" style=" margin-top: 2px; background-color: #e8e46151;
-                margin-bottom: 1%; border-radius: 15px; ">
-<div class="col-10 p-auto" style="font-size: 110%;"><pre>Hi, friends. To use, please, register or login.</pre></div>
-<div class="col-2" ><a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info ">REGISTER</a>
-<a href="{% url 'canban_board:logout_view' %}"class="btn btn-outline-info">LOGIN</a></div>
+<div class="row m-1" style="background-color: #e8e46151; border-radius: 5px;">
+<div class="col-10 pt-3" style="font-size: 120%; color: #422e07dd"><pre>Hi, friends. To use, please, register or login.</pre></div>
+<div class="col-2  pt-2" ><a href=""class="btn btn-outline-info ">REGISTER</a>
+<a href=""class="btn btn-outline-info">LOGIN</a></div>
 </div>
 
 <div class="row">
@@ -27,38 +26,38 @@
 <h3>{{ each.description}}</h3>
 <h3>start date: {{ each.start_date|date:"d M y"}}г.</h3>
 <h3>end date : {{ each.end_date|date:"d M y"}}г.</h3>
-<a href="{% url 'canban_board:change_card' each.id %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-<a href="{% url 'canban_board:delete_card' each.id %}" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">DELETE CARD</a>
 </div>
 {% endfor %}
 </div>
 
 <div class="col-4">
 <h1> DOING </h1>
-<a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">ADD CARD</a>
 {% for each in doing %}
 <div style="border: 3px solid #868e8f20; border-radius: 12px;">
 <h2>{{ each.name}}</h2>
 <h3>{{ each.description}}</h3>
 <h3>start date: {{ each.start_date|date:"d M y"}}г.</h3>
 <h3>end date : {{ each.end_date|date:"d M y"}}г.</h3>
-<a href="{% url 'canban_board:change_card' each.id %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-<a href="{% url 'canban_board:delete_card' each.id %}" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">DELETE CARD</a>
 </div>
 {% endfor %}
 </div>
 
 <div class="col-4">
 <h1> DONE </h1>
-<a href="{% url 'canban_board:create_card' %}" class="btn btn-outline-info btn-sm">ADD CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">ADD CARD</a>
 {% for each in done %}
 <div style="border: 3px solid #868e8f20; border-radius: 12px;">
 <h2>{{ each.name}}</h2>
 <h3>{{ each.description}}</h3>
 <h3>start date: {{ each.start_date|date:"d M y"}}г.</h3>
 <h3>end date : {{ each.end_date|date:"d M y"}}г.</h3>
-<a href="{% url 'canban_board:change_card' each.id %}" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-<a href="{% url 'canban_board:delete_card' each.id %}" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="" class="btn btn-outline-info btn-sm">DELETE CARD</a>
 </div>
 {% endfor %}
 </div>
