--- a/django/canban_board/static/css/canban_board.css
+++ b/django/canban_board/static/css/canban_board.css
@@ -8,4 +8,6 @@ input,  textarea {width:180%;}
 .create{margin-top: 10%; border: 3px solid #13dfed45; border-radius: 15px; padding-left: 3%; padding-right:3%;
         padding-top: 3%; padding-bottom: 3%; width:70%;}
 .login {margin-left: 94%; margin-bottom: 0%; padding: 3px}
-/* color: #3f4142 */
+.registor tr td input, textarea {width:180%;}
+.registor+button {margin-left: 14%; margin-top: 1%}
+.registor tr th {color:gray;}
