--- a/django/canban_board/templates/canban_board/lending.html
+++ b/django/canban_board/templates/canban_board/lending.html
@@ -11,7 +11,7 @@
 
 <div class="row m-1" style="background-color: #e8e46151; border-radius: 5px;">
 <div class="col-10 pt-3" style="font-size: 120%; color: #422e07dd"><pre>Hi, friends. To use, please, register or login.</pre></div>
-<div class="col-2  pt-2" ><a href=""class="btn btn-outline-info ">REGISTER</a>
+<div class="col-2  pt-2" ><a href="{% url 'canban_board:register' %}" class="btn btn-outline-info ">REGISTER</a>
 <a href=""class="btn btn-outline-info">LOGIN</a></div>
 </div>
 
