--- a/django/canban_board/templates/canban_board/lending.html
+++ b/django/canban_board/templates/canban_board/lending.html
@@ -3,9 +3,9 @@
 
 <div class="container">
   <div class="row m-1" style="background-color: #e8e46151; border-radius: 5px; height: 2.7em">
-  <div class="col-9 pt-2" style="font-size: 125%; color: #422e07dd"><pre>Use registration to start</pre></div>
-  <div class="col-3 pt-2"><a href="{% url 'canban_board:register' %}" style="margin-left:25%" class="btn btn-outline-info btn-sm "><b>REGISTRATION<b></a>
-  <a href=""class="btn btn-outline-info btn-sm"><b>CONTACT<b></a></div>
+  <div class="col-9 pt-2" style="font-size: 125%; color: #422e07dd"><pre>Use Sign Up or Login to start</pre></div>
+  <div class="col-3 pt-1"><a href="{% url 'canban_board:register' %}" style="margin-left:52%" class="btn btn-outline-info btn-sm ">SIGN UP</a>
+  <a href="{% url 'login' %}"class="btn btn-outline-info btn-sm">LOGIN</a></div>
   </div>
 
 <div class="row">
