--- a/django/canban_board/templates/canban_board/list.html
+++ b/django/canban_board/templates/canban_board/list.html
@@ -4,8 +4,8 @@
 <div class="container ml-0">
   <div class="row m-1" style="background-color: #e8e46151; border-radius: 5px; height: 2.5em">
   <div class="col-9 pt-2" style="font-size: 120%; color: #422e07dd"><pre>Use logout to exit</pre></div>
-  <div class="col-3 pt-1"><a href="{% url 'canban_board:logout_view' %}" style="margin-left:44%" class="btn btn-outline-info btn-sm">LOGOUT</a>
-  <a href=""class="btn btn-outline-info btn-sm">CONTACT</a></div>
+  <div class="col-3 pt-1"><a href="{% url 'canban_board:logout_view' %}" style="margin-left:37%" class="btn btn-outline-info btn-sm">LOGOUT</a>
+  <a href="{% url 'canban_board:contact' %}"class="btn btn-outline-info btn-sm">CONTACT US</a></div>
   </div>
 <div class="row">
 <div class="col-4">
