--- a/django/canban_board/templates/registration/login.html
+++ b/django/canban_board/templates/registration/login.html
@@ -29,12 +29,11 @@
 </table>
 
 <input type="submit" value="login" style="width:20%; margin-top: 2%; margin-left: 9%; margin-bottom: 2%">
-<input type="hidden" name="next" value="{{ next }}">
+<input type="hidden" name="next" value="{% url 'canban_board:list' %}">
 </form>
 
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<!-- <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 </div>
-</div>
-
+</div> -->
 
 {% endblock %}
