--- a/django/canban_board/static/css/canban_board.css
+++ b/django/canban_board/static/css/canban_board.css
@@ -14,8 +14,7 @@ input,  textarea {width:180%;}
 .registor+button {margin-left: 14%; margin-top: 1%}
 .registor tr th {color:gray;}
 .navbar-brand{margin-right: 67%}
-nav {height: 50%; margin-top: 1%; margin-bottom: 1%}
+nav {height: 3.5em; margin-top: 0.5em; margin-bottom: 0.5em}
 #A {margin-left: 77%;}
-/* #B { padding-right:0%} */
 .col-4{font-size: 130%; color: #422e07dd}
 .col-8{padding-right: 0%}
