--- a/django/canban_board/static/css/canban_board1.css
+++ b/django/canban_board/static/css/canban_board1.css
@@ -4,3 +4,4 @@ input,  textarea {width:100%;}
 .registor tr td input, textarea {width:100%;}
 #A {margin-left: 10%}
 .col-4{font-size: 70%; color: white}
+nav {height: 6em}
