--- a/django/canban_board/templates/canban_board/contact.html
+++ b/django/canban_board/templates/canban_board/contact.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 <div class="container">
-<div class="create mx-lg-auto">
- <p style='text-align: center; font-size: 120%'>Please send your questions to <b>worker.search772@gmail.com</b></p>
+<div class="create mx-lg-auto" style="height:15em">
+ <p style='text-align: center; font-size: 120%; padding-top: 2em; padding-bottom: 2em'>Please send your questions to <b>worker.search772@gmail.com</b></p>
 
+<a href="{% url 'canban_board:list' %}" class="btn btn-outline-info">BACK</a>
 </div>
 </div>
 {% endblock %}
