login requred on 3 view

--- a/django/canban_board/templates/canban_board/list.html
+++ b/django/canban_board/templates/canban_board/list.html
@@ -6,6 +6,7 @@
   <div class="col-4 pt-2"><pre>Use logout to exit</pre></div>
   <div class="col-8 pt-1"><a href="{% url 'canban_board:logout_view' %}" id="A" class="btn btn-outline-info btn-sm">LOGOUT</a>
   <a href="{% url 'canban_board:contact' %}" class="btn btn-outline-info btn-sm">CONTACT US</a></div>
+  <!-- <a href="{% url 'canban_board:lending' %}" class="btn btn-outline-info btn-sm">HOME</a> -->
   </div>
 <div class="row">
 <div class="col-md-4">
