--- a/django/canban_board/templates/canban_board/base.html
+++ b/django/canban_board/templates/canban_board/base.html
@@ -11,6 +11,7 @@
                 crossorigin="anonymous">
          <link rel="stylesheet" href="{% static 'css/canban_board.css' %}">
          <link rel="stylesheet" media="screen and (max-width: 768px)" href="{% static 'css/canban_board1.css' %}">
+         <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
       </head>
   <body>
  {% block content %} {% endblock %}
