--- a/django/canban_board/templates/canban_board/lending.html
+++ b/django/canban_board/templates/canban_board/lending.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-  <nav class="navigation navbar navbar-expand-lg navbar-light" style="background-color:#e8e46151;">
+  <nav class="navigation navbar navbar-expand-lg navbar-light" style="background-color:#868e8f20;">
       <a class="navbar-brand mt-2" href="">Use Sign Up or Login to start</a>
   <a href="{% url 'canban_board:register' %}" class="btn btn-outline-info btn-sm mt-lg-2 ">SIGN UP</a>
   <a href="{% url 'login' %}"class="btn btn-outline-info btn-sm mt-lg-2">LOGIN</a>
@@ -11,7 +11,7 @@
 <div class="row">
 <div class="col-md-4">
 <h1> TO DO </h1>
-<a href="" class="btn btn-outline-info btn-sm">ADD CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">ADD CARD</a>
 
 {% for each in todo %}
 <div style="border: 3px solid #868e8f20; border-radius: 12px; ">
@@ -19,38 +19,38 @@
 <h3>{{ each.description|linebreaks}}</h3>
 <h4>start date: {{ each.start_date|date:"d M y"}}г.</h4>
 <h4>end date : {{ each.end_date|date:"d M y"}}г.</h4>
-<a href="" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-<a href="" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">DELETE CARD</a>
 </div>
 {% endfor %}
 </div>
 
 <div class="col-md-4">
 <h1> DOING </h1>
-<a href="" class="btn btn-outline-info btn-sm">ADD CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">ADD CARD</a>
 {% for each in doing %}
 <div style="border: 3px solid #868e8f20; border-radius: 12px;">
 <h2>{{ each.name|linebreaks}}</h2>
 <h3>{{ each.description|linebreaks}}</h3>
 <h4>start date: {{ each.start_date|date:"d M y"}}г.</h4>
 <h4>end date : {{ each.end_date|date:"d M y"}}г.</h4>
-<a href="" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-<a href="" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">DELETE CARD</a>
 </div>
 {% endfor %}
 </div>
 
 <div class="col-md-4">
 <h1> DONE </h1>
-<a href="" class="btn btn-outline-info btn-sm">ADD CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">ADD CARD</a>
 {% for each in done %}
 <div style="border: 3px solid #868e8f20; border-radius: 12px;">
 <h2>{{ each.name|linebreaks}}</h2>
 <h3>{{ each.description|linebreaks}}</h3>
 <h4>start date: {{ each.start_date|date:"d M y"}}г.</h4>
 <h4>end date : {{ each.end_date|date:"d M y"}}г.</h4>
-<a href="" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
-<a href="" class="btn btn-outline-info btn-sm">DELETE CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">CHANGE CARD</a>
+<a href="" onclick="alert('Use Sign Up or Login to start')" class="btn btn-outline-info btn-sm">DELETE CARD</a>
 </div>
 {% endfor %}
 </div>
